// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inlineSizing renders 0 1`] = `
Array [
  .c0 {
  inline-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders function 1`] = `
Array [
  .c0 {
  inline-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: has;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders invalid theme path 1`] = `
Array [
  .c0 {
  inline-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders negative number 1`] = `
Array [
  .c0 {
  inline-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    inline-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inline-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    inline-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inline-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inline-sizing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    inline-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    inline-sizing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    inline-sizing: July;
  }
}

@media April {
  .c0 {
    inline-sizing: August;
  }
}

@media January {
  .c0 {
    inline-sizing: September;
  }
}

@media April {
  .c0 {
    inline-sizing: November;
  }
}

@media June {
  .c0 {
    inline-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    inline-sizing: July;
  }
}

@media April {
  .c0 {
    inline-sizing: August;
  }
}

@media January {
  .c0 {
    inline-sizing: September;
  }
}

@media April {
  .c0 {
    inline-sizing: November;
  }
}

@media June {
  .c0 {
    inline-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inline-sizing: January;
  }
}

@media April {
  .c0 {
    inline-sizing: December;
  }
}

@media January {
  .c0 {
    inline-sizing: April;
  }
}

@media April {
  .c0 {
    inline-sizing: May;
  }
}

@media June {
  .c0 {
    inline-sizing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    inline-sizing: January;
  }
}

@media April {
  .c0 {
    inline-sizing: December;
  }
}

@media January {
  .c0 {
    inline-sizing: April;
  }
}

@media April {
  .c0 {
    inline-sizing: May;
  }
}

@media June {
  .c0 {
    inline-sizing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders postitive number 1`] = `
Array [
  .c0 {
  inline-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders string 1`] = `
Array [
  .c0 {
  inline-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: June;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`inlineSizing renders valid theme path 1`] = `
Array [
  .c0 {
  inline-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  inline-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
